...
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="8dp" />

...
        android:layout_marginBottom="160dp"
        android:contentDescription="Filter Transactions"
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        app:srcCompat="@drawable/ic_filter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="Add Transaction"
...
