<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.expensemate.ui.transactions.TransactionsFragment"
        android:label="Transactions" />

</navigation> 