...
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPatternName"
            tools:text="DEBIT" />

        <TextView
            android:id="@+id/tvRegex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
...
