<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_menu_summary"
        android:title="Summary" />
    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_account"
        android:title="Accounts" />
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="Transactions" />
</menu> 